# ntlmauth

./: .gitmodules  .hgsub  .hgsubstate  CMakeLists.txt  README  TRANSLATORS  config.inc  definitions.h  install.inc  ntlmauth.cpp  ntlmauth.h  ntlmauth.pri  ntlmauth.pro  ntlmauthfeature.cpp  ntlmauthfeature.h  ntlmauthfeaturefactory.cpp  ntlmauthfeaturefactory.h  ntlmauthplugin.cpp  ntlmauthplugin.h  translations.inc
documents/: AUTHORS  CHANGELOG  INSTALL  README
translations/: languages.cmake  languages.inc  tspull.bat  tspush.bat  tstranslate.bat  tsupdate.bat  tsupdate.sh
translations/.tx/: config
translations/de/: ntlmauth.ts
translations/en/: ntlmauth.ts
translations/es/: ntlmauth.ts
translations/pl/: ntlmauth.ts
translations/ru/: ntlmauth.qm  ntlmauth.ts
translations/uk/: ntlmauth.ts
